# navier-stokes

./: .gitignore  .headless.c.swp  Makefile  demo.c  demo.cu  diferencias_linsolve.md  headless.c  headless.cu  lin_solve.ispc  lin_solve_ispc  lin_solve_ispc.h  meson.build  roofline2.html  run.sh  slurm.sh  solver.c  solver.cu  solver.h  sum.json  test.py  todos.md
automatization/: plotter.py  run.py  slurm.sh  target.py
cuda_examples/: launch.cu
lab1/: ert.ps  informe.md  lab1.md  pres.html  presentacion.html  presentacion.md  summ2.json
lab2/: informe.md  lab2.mlt  presentacion.md
lab3/: informe.md  presentacion.md  roofline.html
lab4/: informe.md  presentacion.md
old/: demo.c  headless.c  lin_solve.h  lin_solve.ispc  solver.c  solver.cu  solver_old
outputs/: plotting.ipynb  sum.json
resres/: merger.py
util/: events  make_movie.py  omp_cheatsheet.md  run.sh  slurm.sh
